--- a/src/components/css/Pads.css
+++ b/src/components/css/Pads.css
@@ -2,26 +2,20 @@
   height: 85%;
   width: 85%;
   margin: auto;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.flex-center {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.pad-row {
-  width: 100%;
-  height: 33.33%;
-}
-
 .single-pad__container {
-  height: 100%;
-  width: 33.33%;
+  height: 30%;
+  width: 30%;
 }
-
-.single-pad__top-margin {
-  width: 100%;
-  height: 5%;
-}
-
 
 .drum-pad {
   height: 90%;
@@ -29,5 +23,10 @@
   margin: auto;
   background-color: darkgrey;
   border-radius: 10%;
-  text-align: center;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
+.drum-pad p {
+  font-family: 'Black Ops One',sans-serif;
+  font-size: 5vmin;
 }
