--- a/src/components/css/Pads.css
+++ b/src/components/css/Pads.css
@@ -23,6 +23,7 @@
   margin: auto;
   background-color: darkgrey;
   border-radius: 10%;
+  cursor: pointer;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
