--- a/src/components/css/App.css
+++ b/src/components/css/App.css
@@ -1,4 +1,4 @@
-.body {
+body {
   touch-action: none;
   margin: auto;
   height: 100vmin;
@@ -9,11 +9,16 @@
   height: 100%;
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .top-margin {
-  width: 100%;
-  height: 5%;
+  margin-top: 50px;
+}
+
+footer {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
 }
